<resources>

    <string name="top_bar_user_profile">User Profile</string>
    <string name="user_profile_my_orders">My orders</string>
    <string name="navigate_back">Navigate back</string>
    <string name="application_info">Application info</string>
    <string name="user_profile_log_out">Log out</string>
    <string name="user_profile_terminate_user_session">Terminate user session</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="my_orders">My orders</string>
    <string name="log_out">Log out</string>
    <string name="email">E-mail</string>
    <string name="update_user_information">Update user information</string>
    <string name="settings">Settings</string>
    <string name="change_e_mail_log_out">E-mail, user session</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="send_feedback">Send feedback</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="change_username">Change username</string>
    <string name="user_icon">User icon</string>
    <string name="email_icon">Email icon</string>
    <string name="password_icon">Password icon</string>
    <string name="notification_icon">Notification icon</string>
    <string name="feedback_icon">Feedback icon</string>
    <string name="about_icon">About icon</string>
    <string name="log_out_icon">Log out icon</string>

</resources>